@@ -74,8 +74,9 @@ public class FakeRegistry implements Registry {
     return RepoSpec.builder()
         .setRuleClassName("local_repository")
         .setAttributes(
-            Dict.immutableCopyOf(Map.of(
-                "name", repoName.getName(), "path", rootPath + "/" + repoName.getName())))
+            Dict.immutableCopyOf(
+                ImmutableMap.of(
+                    "name", repoName.getName(), "path", rootPath + "/" + repoName.getName())))
         .build();
   }
 
